# uMux_IF_Chain_SW

./: HexRegisterValues.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.py.old
uMux_IF_Chain/base_board/: base_board_rev3.py
uMux_IF_Chain/devices/: lmx2592.py  tmp275.py
uMux_IF_Chain/devices/tics_synth_init/: lmx2592_init_100MHz_Ref.txt  lmx2592_init_200MHz_Ref.txt
uMux_IF_Chain/scripts/: HexRegisterValues.txt  simple_gui.py  startup_script.py  test_script.py  usb_loopback.py  windows_startup.py
uMux_IF_Chain/uMux_IF/: uMux_IF_Rev1.py
uMux_IF_Chain/utilities/: console_print_color.py
