[metadata]
name = uMUX_IF_Chain
author = Dark Tyr
# author_email = tyrofthedark@gmail.com
version = attr: uMUX_IF_Chain.__version__
description = Microwave Multiplexer Intermediate Frequency Conversion Chain Control Software
long_description = file: README.md
long_description_content_type = text/x-md
keywords = hardware, control
# license = MIT
home_page = https://github.com/DarkTyr/uMux_IF_Chain_SW
project_urls =
    Issue Tracker = https://github.com/DarkTyr/uMux_IF_Chain_SW/issues
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Utilities

[options]
packages = find:
include_package_data = true
install_requires =
    setuptools
    importlib_resources


[options.entry_points]
console_scripts =
    resources-example = myapp:main

[bdist_wheel]
universal = 1
