[metadata]
name = uMUX_IF_Chain_SW
author = Dark Tyr
version = 0.0.0
description = Microwave Multiplexer Intermediate Frequency Conversion Chain Control Software
long_description = file: README.md
long_description_content_type = text/x-md
keywords = hardware, control
# license = MIT
home_page = https://github.com/DarkTyr/uMux_IF_Chain_SW
project_urls =
    Issue Tracker = https://github.com/DarkTyr/uMux_IF_Chain_SW/issues
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Utilities

[options]
packages = find:
include_package_data = true
install_requires =
    setuptools
    importlib_resources
    numpy
    tqmd
    pyserial

[options.entry_points]
console_scripts =
    uMux_IF_Chain-startup_script = uMux_IF_Chain.scripts.startup_script:main
    uMux_IF_Chain-test_script = uMux_IF_Chain.scripts.test_script:main
    uMux_IF_Chain-simple_gui = uMux_IF_Chain.scripts.simple_gui:main

[bdist_wheel]
universal = 1
